--- a/index.html
+++ b/index.html
@@ -5,65 +5,66 @@
 
   <title>Memory Game</title>
 
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
+  <h1> Memory Game!</h1>
   <section class="memory-game">
     <div class="memory-card" data-framework="aurelia">
-      <img class="front-face" src="aurelia-logo.png" alt="Aurelia" />
-      <img class="back-face" src="Javascript_badge.svg_.png" alt="JS Badge" />
+      <img class="front-face" src="assets/img/aurelia.png" alt="Aurelia" />
+      <img class="back-face" src="assets/img/javascript.png" alt="JS Badge" />
     </div>
     <div class="memory-card" data-framework="aurelia">
-      <img class="front-face" src="aurelia-logo.png" alt="Aurelia" />
-      <img class="back-face" src="Javascript_badge.svg_.png" alt="JS Badge" />
+      <img class="front-face" src="assets/img/aurelia.png" alt="Aurelia" />
+      <img class="back-face" src="assets/img/javascript.png" alt="JS Badge" />
     </div>
 
     <div class="memory-card" data-framework="vue">
-      <img class="front-face" src="vuelogo.png" alt="Vue" />
-      <img class="back-face" src="Javascript_badge.svg_.png" alt="JS Badge" />
+      <img class="front-face" src="assets/img/vue.png" alt="Vue" />
+      <img class="back-face" src="assets/img/javascript.png" alt="JS Badge" />
     </div>
     <div class="memory-card" data-framework="vue">
-      <img class="front-face" src="vuelogo.png" alt="Vue" />
-      <img class="back-face" src="Javascript_badge.svg_.png" alt="JS Badge" />
+      <img class="front-face" src="assets/img/vue.png" alt="Vue" />
+      <img class="back-face" src="assets/img/javascript.png" alt="JS Badge" />
     </div>
 
     <div class="memory-card" data-framework="angular">
-      <img class="front-face" src="Angular-logo.svg.png" alt="Angular" />
-      <img class="back-face" src="Javascript_badge.svg_.png" alt="JS Badge" />
+      <img class="front-face" src="assets/img/angular.png" alt="Angular" />
+      <img class="back-face" src="assets/img/javascript.png" alt="JS Badge" />
     </div>
     <div class="memory-card" data-framework="angular">
-      <img class="front-face" src="Angular-logo.svg.png" alt="Angular" />
-      <img class="back-face" src="Javascript_badge.svg_.png" alt="JS Badge" />
+      <img class="front-face" src="assets/img/angular.png" alt="Angular" />
+      <img class="back-face" src="assets/img/javascript.png" alt="JS Badge" />
     </div>
 
     <div class="memory-card" data-framework="ember">
-      <img class="front-face" src="ember.png" alt="Ember" />
-      <img class="back-face" src="Javascript_badge.svg_.png" alt="JS Badge" />
+      <img class="front-face" src="assets/img/ember.png" alt="Ember" />
+      <img class="back-face" src="assets/img/javascript.png" alt="JS Badge" />
     </div>
     <div class="memory-card" data-framework="ember">
-      <img class="front-face" src="ember.png" alt="Ember" />
-      <img class="back-face" src="Javascript_badge.svg_.png" alt="JS Badge" />
+      <img class="front-face" src="assets/img/ember.png" alt="Ember" />
+      <img class="back-face" src="assets/img/javascript.png" alt="JS Badge" />
     </div>
 
     <div class="memory-card" data-framework="backbone">
-      <img class="front-face" src="backbonejs.jpg" alt="Backbone" />
-      <img class="back-face" src="Javascript_badge.svg_.png" alt="JS Badge" />
+      <img class="front-face" src="assets/img/backbonejs.jpg" alt="Backbone" />
+      <img class="back-face" src="assets/img/javascript.png" alt="JS Badge" />
     </div>
     <div class="memory-card" data-framework="backbone">
-      <img class="front-face" src="backbonejs.jpg" alt="Backbone" />
-      <img class="back-face" src="Javascript_badge.svg_.png" alt="JS Badge" />
+      <img class="front-face" src="assets/img/backbonejs.jpg" alt="Backbone" />
+      <img class="back-face" src="assets/img/javascript.png" alt="JS Badge" />
     </div>
 
     <div class="memory-card" data-framework="react">
-      <img class="front-face" src="react-logo.png" alt="React" />
-      <img class="back-face" src="Javascript_badge.svg_.png" alt="JS Badge" />
+      <img class="front-face" src="assets/img/react.png" alt="React" />
+      <img class="back-face" src="assets/img/javascript.png" alt="JS Badge" />
     </div>
     <div class="memory-card" data-framework="react">
-      <img class="front-face" src="react-logo.png" alt="React" />
-      <img class="back-face" src="Javascript_badge.svg_.png"JS Badge" />
+      <img class="front-face" src="assets/img/react.png" alt="React" />
+      <img class="back-face" src="assets/img/javascript.png" alt="JS Badge" />
     </div>
   </section>
 
-  <script src="main.js"></script>
+  <script src="./assets/js/main.js"></script>
 </body>
 </html>
